// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders default 1`] = `
<p
  class="
			text-base p-2
			h-10 w-10
			rounded-full border-2 flex relative bg-gray-300 text-gray-500 items-center"
>
  TL
</p>
`;

exports[`Avatar renders with lg size 1`] = `
<img
  alt="The image alt tag for the default Avatar Component"
  class="inline-block rounded-full ring-2 ring-white h-12 w-12"
  src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/170.jpg"
/>
`;

exports[`Avatar renders with md size 1`] = `
<img
  alt="The image alt tag for the default Avatar Component"
  class="inline-block rounded-full ring-2 ring-white h-10 w-10"
  src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/170.jpg"
/>
`;

exports[`Avatar renders with size lg 1`] = `
<p
  class="
			text-lg p-3
			h-12 w-12
			rounded-full border-2 flex relative bg-gray-300 text-gray-500 items-center"
>
  TL
</p>
`;

exports[`Avatar renders with size md 1`] = `
<p
  class="
			text-base p-2
			h-10 w-10
			rounded-full border-2 flex relative bg-gray-300 text-gray-500 items-center"
>
  TL
</p>
`;

exports[`Avatar renders with size sm 1`] = `
<p
  class="
			text-sm p-1.5
			h-8 w-8
			rounded-full border-2 flex relative bg-gray-300 text-gray-500 items-center"
>
  TL
</p>
`;

exports[`Avatar renders with size xs 1`] = `
<p
  class="
			text-[0.5rem] p-1
			h-6 w-6
			rounded-full border-2 flex relative bg-gray-300 text-gray-500 items-center"
>
  TL
</p>
`;

exports[`Avatar renders with sm size 1`] = `
<img
  alt="The image alt tag for the default Avatar Component"
  class="inline-block rounded-full ring-2 ring-white h-8 w-8"
  src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/170.jpg"
/>
`;

exports[`Avatar renders with src size default 1`] = `
<img
  alt="The image alt tag for the default Avatar Component"
  class="inline-block rounded-full ring-2 ring-white h-10 w-10"
  src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/170.jpg"
/>
`;

exports[`Avatar renders with xs size 1`] = `
<img
  alt="The image alt tag for the default Avatar Component"
  class="inline-block rounded-full ring-2 ring-white h-6 w-6"
  src="https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/170.jpg"
/>
`;
